# rust-embedded-experiments

./: README.md
feather-m4/: README.md
feather-m4/blinky/: Cargo.toml  memory.x
feather-m4/blinky/src/: main.rs
feather-m4/bme280-i2c/: Cargo.toml
feather-m4/bme280-i2c/src/: main.rs
feather-m4/neopixel/: Cargo.toml
feather-m4/neopixel/src/: main.rs
invaders-stable/: Cargo.toml  memory.x
lpc55s69-evk/: README.md
lpc55s69-evk/blinky/: Cargo.toml
lpc55s69-evk/blinky/.cargo/: config
lpc55s69-evk/blinky/src/: main.rs
lpc55s69-evk/bme280-i2c/: Cargo.toml  README.md
lpc55s69-evk/bme280-i2c/src/: main.rs
lpc55s69-evk/ssd1306-spi/: Cargo.toml  README.md
lpc55s69-evk/ssd1306-spi/src/: main.rs
lpc55s69-evk/st7789-spi/: Cargo.toml  README.md  memory.x
lpc55s69-evk/st7789-spi/src/: main.rs
nrf52840-dk/: README.md
nrf52840-dk/blinky/: Cargo.toml  README.md
nrf52840-dk/blinky/src/: main.rs
nrf52840-dk/bme280-i2c/: Cargo.toml  memory.x
nrf52840-dk/bme280-i2c/src/: main.rs
nrf52840-dk/ssd1306-spi/: Cargo.toml  README.md
nrf52840-dk/ssd1306-spi/src/: main.rs
nrf52840-dk/st7789-spi/: Cargo.toml  README.md
nrf52840-dk/st7789-spi/src/: main.rs
nrf52840-dongle/blinky/: Cargo.toml  README.md  memory.x
nrf52840-dongle/blinky/src/: main.rs
stm32f411/: README.md
stm32f411-blinky/: Cargo.toml  README.md  memory.x
stm32f411-blinky/src/: main.rs
stm32f411-hal-blinky/: Cargo.toml  README.md
stm32f411-hal-blinky/src/: main.rs
stm32f411-hal-ssd1306/: Cargo.toml  README.md
stm32f411/ads1x1x-i2c/: Cargo.toml
stm32f411/ads1x1x-i2c/src/: main.rs
stm32f411/apds9960-i2c/: Cargo.toml
stm32f411/apds9960-i2c/src/: main.rs
stm32f411/blinky/: Cargo.toml  README.md
stm32f411/bme280-i2c/: Cargo.toml  README.md
stm32f411/bme280-i2c/src/: main.rs
stm32f411/hal-blinky/: Cargo.toml  README.md
stm32f411/hal-blinky/src/: main.rs
stm32f411/hal-ssd1306/: Cargo.toml  README.md
stm32f411/hal-ssd1306/src/: main.rs
stm32f411/ssd1306-i2c/: Cargo.toml  README.md
stm32f411/ssd1306-i2c/.cargo/: config
stm32f411/ssd1306-i2c/src/: main.rs
stm32f411/ssd1306-spi/: Cargo.toml
stm32f411/ssd1306-spi/src/: main.rs
stm32f411/st7789-spi/: Cargo.toml  README.md
stm32f411/st7789-spi/src/: main.rs
stm32f411/usb-cdc/: Cargo.toml  README.md  stm32f411.cfg
stm32f411/usb-cdc/src/: main.rs
stm32f746g-disc/invaders-nightly/: Cargo.toml  README.md
stm32f746g-disc/invaders-nightly/src/: main.rs
stm32f746g-disc/invaders-stable/: Cargo.toml  README.md
stm32f746g-disc/invaders-stable/.cargo/: config
stm32f746g-disc/invaders-stable/src/: main.rs
wio-terminal/: README.md
wio-terminal/blinky/: Cargo.toml  memory.x
wio-terminal/blinky/.cargo/: config
wio-terminal/blinky/src/: main.rs
xiao/blinky/: Cargo.toml
xiao/blinky/.cargo/: config
xiao/blinky/src/: main.rs
