[package]
name = "bme280-i2c"
version = "0.1.0"
edition = "2018"

[dependencies]
bme280 = "0.2.1"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
feather_m4 = "0.4.0"
panic-semihosting = "0.5.3"

[profile.release]
opt-level = 'z'
lto = true
debug = true
