[package]
name = "neopixel"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
feather_m4 = "0.5.0"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-timer-delay = { version="0.3.0", features=["slow"]}

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
