[package]
name = "bme280-i2c"
version = "0.1.0"
edition = "2018"

[dependencies]
bme280 = "0.2.1"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
lpc55-hal = "0.0.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.5.3"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
