[package]
name = "st7789-spi"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
lpc55-hal = "0.0.3"
cortex-m = { version = "0.6.2", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
embedded-graphics = "0.6.2"
st7789 = "0.5.0"
display-interface-spi = "0.4.0"
rand = {version = "0.7.0", default-features = false, features = ["small_rng"]}
