[package]
name = "st7789-spi"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
lpc55-hal = "0.0.3"
rand = {version = "0.7.0", default-features = false, features = ["small_rng"]}
st7789 = "0.5.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
