[package]
name = "st7789-spi"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
cortex-m = { version = "0.6.2", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.2"
embedded-hal = "0.2.4"
nrf52840-hal = "0.10.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
rand = {version = "0.7.0", default-features = false, features = ["small_rng"]}
st7789 = "0.5.0"
