[package]
name = "ads1x1x-i2c"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4xx-hal = {version = "0.7.0", features = ["stm32f411", "rt"]}
embedded-hal = "0.2.3"
ads1x1x = "0.2.0"
nb = "0.1.2"
