[package]
name = "ads1x1x-i2c"
version = "0.1.0"
edition = "2018"

[dependencies]
ads1x1x = "0.2.0"
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
stm32f4xx-hal = {version = "0.8.3", features = ["stm32f411", "rt"]}

[features]
default = ["ads1115"]
ads1115 = []
ads1015 = []

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
