[package]
name = "blinky"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}

