[package]
name = "hal-blinky"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
stm32f4xx-hal = {version = "0.8.3", features = ["stm32f411", "rt"]}

[features]
default = []
core_delay = []

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
