[package]
name = "ssd1306-spi"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4xx-hal = {version = "0.8.0", features = ["stm32f411", "rt"]}
embedded-graphics = "0.6.1"
rand = {version = "0.7.0", default-features = false, features = ["small_rng"]}
ssd1306 = "0.3.1"

[features]
default = ["spi1"]
spi1 = []
spi2 = []