[package]
name = "st7789-spi"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
display-interface-spi = "0.4.0"
embedded-graphics = "0.6.1"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
rand = {version = "0.7.0", default-features = false, features = ["small_rng"]}
st7789 = "0.5.0"
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
stm32f4xx-hal = {version = "0.8.3", features = ["stm32f411", "rt"]}

[features]
default = ["spi1"]
spi1 = []
spi2 = []

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'
