[package]
name = "usb-cdc"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true

[dependencies]
cortex-m = { version = "0.6.3", features = [ "const-fn" ] }
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4 = {version = "0.11.0", features = ["stm32f411", "rt"]}
stm32f4xx-hal = {version = "0.8.3", features = ["stm32f411", "usb_fs", "rt"]}
usb-device = "0.2.5"
usbd-serial = "0.1.0"
