[package]
authors = ["Mathias Brossard <mathias@brossard.org>"]
name = "stm32f746g-disc-invaders"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
debug = true
incremental = false
codegen-units = 1 # better optimizations

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
alloc-cortex-m = "=0.3.5"
linked_list_allocator = "=0.6.4"
stm32f7-discovery = { git="https://github.com/embed-rs/stm32f7-discovery.git" }

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]

[patch.'https://github.com/rust-lang-nursery/futures-rs.git']
futures-preview = { git="https://github.com/rust-lang/futures-rs", rev = "845c71e6c66c1dbffd22cfc7e9f992ec5686373f" }
