[package]
name = "blinky"
version = "0.1.0"
edition = "2018"

[dependencies]
atsamd-hal = { git = "https://github.com/atsamd-rs/atsamd.git", features = ["samd51p19a"] }
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = 'z'
